[metadata]
name = google_cloud_ndbm
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Wrapper for google.cloud.ndb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/google.cloud.ndbm
project_urls =
    Bug Tracker = https://github.com/vb64/google.cloud.ndbm/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = google_cloud_ndbm
include_package_data=True
install_requires = google-cloud-ndb==1.11.2
